# qq2memos

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
app/: bot.py  pyproject.toml
app/src/plugins/: qq_to_memos.py
memos/plugins/: auto_friend_request.py  qq_to_memos.py
